--- a/paginas/login.html
+++ b/paginas/login.html
@@ -11,8 +11,12 @@
         <h1>Pronto para corrigir tarefas?</h1>
         <p>É ótimo te ver novamente!</p>
          <form action="">
-           <input type="email">
-           <input type="password">
+            <div id="email"></div>
+            <label for="email">Email:</label>
+           <input type="email" id="email">
+           <div id="password"></div>
+           <label for="password">Senha:</label>
+           <input type="password" id="password">
            <button>botao</button>
          </form>
          <p>Não tem uma conta? Crie uma agora!</p>
