--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projetinho</title>
+    <title>Projeto</title>
 </head>
 <body>
-    
+    <main>
+        <img src="/Image/Kids Studying from Home-rafiki 1.jpg" alt="">
+    </main>
 </body>
 </html>
