--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto</title>
+    <title>Projetinho</title>
 </head>
 <body>
-    <main>
-        <img src="/Image/Kids Studying from Home-rafiki 1.jpg" alt="">
-    </main>
+    
 </body>
 </html>
