--- a/Pages/login.html
+++ b/Pages/login.html
@@ -9,21 +9,23 @@
 <body>
     <main>
         <div id="form">
-            <h1>Pronto para corrigir <span>tarefas?</span></h1>
+            <h1>Pronto para corrigir <span class="cor">tarefas?</span></h1>
             <p>É ótimo te ver novamente!</p>
             <form action="">
-                <label for="email">Email:</label>
+                <label for="email">Email</label>
                 <br>
                 <input type="email" name="email" id="email">
                 <br>
-                <label for="password">Senha:</label>
+                <label for="password">Senha</label>
                 <br>
                 <input type="password" name="password" id="password">
                 <br>
-                <p>Esqueci minha senha</p>
+                <a href=""><p>Esqueci minha senha</p></a>
+               
                 <button type="submit">Acessar minha conta</button>
+                <br>
+                <p class="txt1">Não tem uma conta?<a href="" class="cor"> Crie uma agora!</a></p>
             </form>
-            
         </div>
         <div id="img">
             <img src="/Image/ImageLogin.png" alt="">
