finalizando a pagina de login

--- a/Pages/login.html
+++ b/Pages/login.html
@@ -25,6 +25,11 @@
                 <button type="submit">Acessar minha conta</button>
                 <br>
                 <p class="txt1">Não tem uma conta?<a href="" class="cor"> Crie uma agora!</a></p>
+                <div id="ou"><p class="linha"></p><p>Ou</p> <p class="linha"></p></div>
+                <br>
+                <button class="enter"><img src="/Image/devicon_google.png" alt="" class="icon">Entrar com o Google</button>
+                <br>
+                <button class="enter"><img src="/Image/ic_baseline-facebook.png" alt="" class="icon">Entrar com o Facebook</button>
             </form>
         </div>
         <div id="img">
