Criando a pasta do backend

--- a/Pages/login.html
+++ b/Pages/login.html
@@ -11,7 +11,7 @@
         <div id="form">
             <h1>Pronto para corrigir <span class="cor">tarefas?</span></h1>
             <p>É ótimo te ver novamente!</p>
-            <form action="">
+            <form action="dados.java">
                 <label for="email">Email</label>
                 <br>
                 <input type="email" name="email" id="email">
