--- a/Pages/login.html
+++ b/Pages/login.html
@@ -24,7 +24,7 @@
                
                 <button type="submit">Acessar minha conta</button>
                 <br>
-                <p class="txt1">Não tem uma conta?<a href="" class="cor"> Crie uma agora!</a></p>
+                <p class="txt1">Não tem uma conta?<a href="register.html" class="cor"> Crie uma agora!</a></p>
                 <div id="ou"><p class="linha"></p><p>Ou</p> <p class="linha"></p></div>
                 <br>
                 <button class="enter"><img src="/Image/devicon_google.png" alt="" class="icon">Entrar com o Google</button>
