Arrumando um erros pontuais

--- a/Pages/register.html
+++ b/Pages/register.html
@@ -12,15 +12,9 @@
             <h1>Seja bem vido a melhor <span class="cor">plataforma de estudos!</span></h1>
             <p>Vamos criar sua conta bem rápido?</p>
             <form action="dados.java">
-                <div id="cabecalho">
-                <label for="nome">Nome *</label>
+                <label for="nome">Nome Completo *</label>
                 <br>
                 <input type="text" name="name" id="name">
-             
-                <label for="sobrenome">Sobrenome *</label>
-                <br>
-                <input type="text" name="sobrenome" id="sobrenome">
-                </div>
                 <br>
                 <label for="telefone">Telefone *</label>
                 <br>
