--- a/Pages/register.html
+++ b/Pages/register.html
@@ -31,7 +31,7 @@
                
                 <button type="submit">Criar uma conta</button>
                 <br>
-                <p class="txt1">Já tem uma conta?<a href="/Pages/login.html" class="cor"> Entre agora!</a></p>
+                <p class="txt1">Já tem uma conta?<a href="/index.html" class="cor"> Entre agora!</a></p>
                 <div id="ou"><p class="linha"></p><p>Ou</p> <p class="linha"></p></div>
                 <br>
                 <button class="enter"><img src="/Image/devicon_google.png" alt="" class="icon">Registrar com o Google</button>
