--- a/index.html
+++ b/index.html
@@ -3,9 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projetinho</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="/Pages/style.css">
 </head>
 <body>
-    
+    <main>
+        <div id="form">
+            <h1>Pronto para corrigir <span class="cor">tarefas?</span></h1>
+            <p>É ótimo te ver novamente!</p>
+            <form action="dados.java">
+                <label for="email">Email</label>
+                <br>
+                <input type="email" name="email" id="email">
+                <br>
+                <label for="password">Senha</label>
+                <br>
+                <input type="password" name="password" id="password">
+                <br>
+                <a href=""><p>Esqueci minha senha</p></a>
+               
+                <button type="submit">Acessar minha conta</button>
+                <br>
+                <p class="txt1">Não tem uma conta?<a href="/Pages/register.html" class="cor"> Crie uma agora!</a></p>
+                <div id="ou"><p class="linha"></p><p>Ou</p> <p class="linha"></p></div>
+                <br>
+                <button class="enter"><img src="/Image/devicon_google.png" alt="" class="icon">Entrar com o Google</button>
+                <br>
+                <button class="enter"><img src="/Image/ic_baseline-facebook.png" alt="" class="icon">Entrar com o Facebook</button>
+            </form>
+        </div>
+        <div id="img">
+            <img src="/Image/ImageLogin.png" alt="">
+        </div>
+    </main>
 </body>
 </html>
