--- a/Pages/register.html
+++ b/Pages/register.html
@@ -34,9 +34,9 @@
                 <p class="txt1">Já tem uma conta?<a href="/index.html" class="cor"> Entre agora!</a></p>
                 <div id="ou"><p class="linha"></p><p>Ou</p> <p class="linha"></p></div>
                 <br>
-                <button class="enter"><img src="/Image/devicon_google.png" alt="" class="icon">Registrar com o Google</button>
+                <button class="enter"><img src="./Image/devicon_google.png" alt="" class="icon">Registrar com o Google</button>
                 <br>
-                <button class="enter"><img src="/Image/ic_baseline-facebook.png" alt="" class="icon">Registrar com o Facebook</button>
+                <button class="enter"><img src="./Image/ic_baseline-facebook.png" alt="" class="icon">Registrar com o Facebook</button>
             </form>
         </div>
         <div id="img">
