--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <br>
                 <input type="password" name="password" id="password">
                 <br>
-                <a href=""><p>Esqueci minha senha</p></a>
+                <a href=""><p>Esqueci minha senha.</p></a>
                
                 <button type="submit">Acessar minha conta</button>
                 <br>
